@@ -1,3 +1,7 @@
+[B]Version 2.5.5[/B]
+
+- Added item count to some directory names
+
 [B]Version 2.5.4[/B]
 
 - Flattened "All" listing and forces 2000 items for listing.
